--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="icon" type="image/ico" href="favicon.ico">
-		<title>Google Homepage</title>
+		<title>Google</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
