--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		</div>
 			<p>
 				<ul>
-					<li id="butt">Google Search</li>
-					<li id="butthead">I'm Feeling Lucky</li>
+					<li id="lbutton">Google Search</li>
+					<li id="rbutton">I'm Feeling Lucky</li>
 				</ul>
 			</p>
 
